<resources>

    <string name="app_name_sdk">GameSDK</string>
    <string name="account_login">Register Login</string>
    <string name="account">Account</string>
    <string name="account_regular">Username or E-mail required standard 5-18 bit lowercase letters, numbers, underscores, hyphens, @,.</string>
    <string name="password">Password</string>
    <string name="password_agin">Password confirmation:</string>
    <string name="password_regular">Password required 6-20</string>
    <string name="register">Register</string>
    <string name="register_now">Register now</string>
    <string name="login">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="network_unavailable">The network unavailable</string>
    <string name="network_not_good">Network is not good</string>
    <string name="username_not_empty">username can not be empty</string>
    <string name="password_not_empty">password can not be empty</string>
    <string name="signature_failed">Signature verification failed</string>
    <string name="timestamp_expires">Timestamp expires</string>
    <string name="parameter_not_formatted">There parameter is empty or incorrectly formatted</string>
    <string name="user_locked">Platform users have been locked</string>
    <string name="illegal_user">Illegal users</string>
    <string name="u_p_not_pass">Username Password (or verification code) does not pass validation</string>
    <string name="cookie_fail">cookie validation fails</string>
    <string name="password_error_five">Wrong password 5 times, requires the user to enter the captcha code</string>
    <string name="phone_not_land">Phone number the user has not been bound to prohibit landing web version of the game</string>
    <string name="account_not_activated">Account is not activated</string>
    <string name="sdk_disabled">Sdk has been disabled in this version, please upgrade sdk</string>
    <string name="system_abnormality">System abnormalities, unsuccessful login operation</string>
    <string name="loging">Please log in later...</string>
    <string name="register_account">Create an Account</string>
    <string name="username_is_used">User name is already in use</string>
    <string name="username_validation_fail">Username validation fails</string>
    <string name="password_validation_fail">Not the same password twice</string>
    <string name="registering">Please wait registration...</string>
    <string name="register_ok">Successful registration</string>
    <string name="register_fail">Registration failed</string>
    <string name="remember_password">Remember password</string>
    <string name="switching_account">Switching account</string>
    <string name="terms_of_service">I have read and agree to the "Flying Bean User Terms of Service."</string>
    <string name="note_of_service">Please note that the "Flying Bean User Terms of Service."</string>
    <string name="failure_to_report">Failure to report</string>
    <string name="forgot_password_text">Visit fly beans Internet www.feidou.com retrieve your password, please make sure to set a password to retrieve the problem, or account for the mailbox registered. \n 
		You can also contact customer service, back account. \n 
		Customer Service Email: \n 
		contactcorp.kaixin001.com \n 
		Customer Service Phone: \n 
		400-6115-001 \n 
		(Working hours from Monday to Sunday 09:00 ~ 18:00) \n</string>
    <string name="prompt">Prompt</string>
    <string name="sure">Sure</string>
    <string name="init_fail">Google Play initialization fails, the current can not be paid, make sure your area supports Google Play paid or restart the game and try again!</string>
    <string name="getorderid_fail">Failed to get platform Order Number</string>
    <string name="submit_fail">Submit data to the platform abnormal</string>
    <string name="pay_ok">Successful recharge</string>
    <string name="recover_order">Last orders are recovering...</string>
	<string name="recover_ok">Orders restoration completed</string>
	<string name="game_recharge">Game recharge</string>
	<string name="buy">Buy</string>
	<string name="gold">Gold</string>
    <string name="input_kaixin_feidou">Please enter a fly beans / Kaixin account</string>
    <string name="input_accout">Please enter account</string>
    <string name="input_password">Please enter password</string>
    
    
    <string name="product_des1">10 gold coins</string>
    <string name="product_des2">20 gold coins</string>
    <string name="product_des3">30 gold coins</string>
    <string name="product_des4">40 gold coins</string>
    <string name="product_des5">50 gold coins</string>
    
    <string name="exchange">Exchange</string>
    <string name="refresh">Refresh</string>
    <string name="platform_currency">Happy currency balance:</string>
    <string name="recharge">Recharge</string>
    <string name="if_sure_exchange">Are you sure you exchange it?</string>
    <string name="cancel">Cancel</string>
    <string name="get_balance_fail">Failed to get the balance point platform</string>
    <string name="pointis_insufficient">Platform points is insufficient, please recharge</string>
     
</resources>