<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="250dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/account_login"
        android:textColor="#92BF40"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#f1f1f1"
        android:orientation="vertical" >

        <!-- 账号栏 -->

        <LinearLayout
            android:id="@+id/account_layout"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/up_edit_bg"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/account_edittext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="#ffffff"
                android:hint="@string/input_kaixin_feidou"
                android:inputType="textUri"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <!-- 密码栏 -->

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/down_edit_bg"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="#ffffff"
                android:inputType="textPassword"
                android:hint="@string/input_password"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <!-- 按钮栏 -->

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"            
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1.0"
                android:background="@drawable/blue_bg"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:text="@string/register" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.0"
                android:textColor="#ffffff"
                android:background="@drawable/green_bg"
                android:textSize="15dp"
                android:text="@string/login" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
			<CheckBox 
			    android:id="@+id/remember_password"
			    android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/remember_password"
                android:textColor="#000000"
                android:textSize="15dp"
                android:checked="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
			    />
            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="15dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="0dp"
                android:layout_alignBaseline="@id/remember_password"
                android:text="@string/forgot_password" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>