<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    tools:context=".PlatformPayActivity" >

    <LinearLayout
        android:id="@+id/product_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/game_recharge"
            android:textColor="#92BF40"
            android:textSize="20dp" />

        <!-- 平台支付 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#f1f1f1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/platform_currency"
                android:textColor="#a3a3a3"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/platform_pay_balance"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#fab86b"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textSize="15dp" />

            <ImageView 
                android:id="@+id/platform_refresh"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/refresh"
                />
            <TextView
                android:id="@+id/platform_pay_recharge"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@drawable/pay_green_bg"
                android:text="@string/recharge"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="5dp"
                android:textSize="15dp" />
        </LinearLayout>
      

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:background="#f1f1f1"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/platform_pay_listview"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:divider="#f1f1f1" 
				android:dividerHeight="5dp" 
				android:layout_marginTop="5dp"
                 >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>